<resources>
    <string name="app_name">Movs</string>
    <string name="open">Open_Drawer</string>
    <string name="close">Close_Drawer</string>
    <string name="network">Check Network Connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_title">Best Trailers in Store</string>
    <string name="movie_title">Watch the best Trailer of your best movie today</string>
    <string name="upcoming_title">Checkout the upcoming Movies on your screen</string>
    <string name="now_title">Now Showing</string>
    <string name="top_rated_title">Top Rated Movies</string>
    <string name="fav_title">Favorite</string>
    <string name="popular_title">Popular Movies</string>
    <string name="account">Account</string>
    <string name="title_details">Joker</string>
    <string name="rate">8.9</string>
    <string name="action">Action</string>
    <string name="horror">Horror</string>
    <string name="thriller">Thriller</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="overview">Overview</string>
    <string name="overview_sample">FedEx is a delivery service company whose headquarters are in Memphis Tennessee and it is majorly known for its shipping services</string>
    <string name="release_date">Release Date</string>
    <string name="release_date_sample">2020-12-23</string>
    <string name="now_showing_title">Now Showing</string>
    <string name="more">See All</string>
    <string name="upcoming_title_sample">Upcoming</string>
    <string name="popular_title_sample">Popular</string>
    <string name="top_rated_title_sample">Top Rated</string>
    <string name="trailer_thumbnail_title">Choose a trailer to watch</string>
    <string name="settings">Settings</string>
    <string name="action_name">Action</string>
    <string name="the_secret_garden">The Secret Garden</string>
    <string name="val_now">7.3</string>
    <string name="project_power">Project Power</string>
    <string name="val_pop">269.5</string>
    <string name="val_rate">7.3</string>
    <string name="val_up">7.3</string>
    <string name="bottom_mov">Movies</string>
    <string name="bottom_upcoming">Upcoming</string>
    <string name="bottom_mov_now">Now Showing</string>
    <string name="bottom_mov_top">Top Rated</string>
    <string name="nav_mov">Movies</string>
    <string name="nav_up">Upcoming Movies</string>
    <string name="nav_up_now">Now Showing</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="nav_account">Account</string>
    <string name="icon_search">Search</string>
    <string name="tool_settings">Settings</string>
    <string name="tool_search">Search</string>
    <string name="user">User</string>
</resources>
