<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/Home"
            android:title="@string/nav_mov"
            android:icon="@drawable/ic_home_black_24dp"
            />
        <item android:id="@+id/UpcomingMovies"
            android:title="@string/nav_up"
            android:icon="@drawable/ic_video_library_black_24dp"
            />
        <item android:id="@+id/NowShowing"
            android:title="@string/nav_up_now"
            android:icon="@drawable/ic_movie_black_24dp"
            />
        <item android:id="@+id/profile"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            />
        <item android:id="@+id/share"
            android:title="@string/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            />
    </group>

</menu>