<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MoviesFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ProgressBar
            android:id="@+id/progressMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>
    
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeMovies"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarSize="0dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerNowShowing2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="horizontal"
                        android:scrollbarSize="0dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    >


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerGenre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:scrollbars="horizontal"
                        android:scrollbarSize="0dp"
                        />
                </RelativeLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    >

                    <TextView
                        android:id="@+id/txtHeaderUpcoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/upcoming_title_sample"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/nunitobold"
                        android:layout_marginBottom="10dp"

                        />
                    <TextView
                        android:id="@+id/txtHeaderUpcoming2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:paddingRight="20dp"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/nunitobold"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerUpcoming"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtHeaderUpcoming"
                        android:layout_marginTop="7dp"
                        android:scrollbars="horizontal"
                        android:scrollbarSize="0dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                >

                <TextView
                    android:id="@+id/txtHeaderPopular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/popular_title_sample"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/nunitobold"
                    android:layout_marginBottom="10dp"

                    />
                <TextView
                    android:id="@+id/txtHeaderPopular2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:fontFamily="@font/nunitobold"
                    android:paddingRight="20dp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtHeaderPopular"
                    android:layout_marginTop="7dp"
                    android:scrollbars="horizontal"
                    android:scrollbarSize="0dp"

                    />
            </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    >

                    <TextView
                        android:id="@+id/txtHeaderTopRated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/top_rated_title_sample"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/nunitobold"
                        android:layout_marginBottom="10dp"

                        />
                    <TextView
                        android:id="@+id/txtHeaderTopRated2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:fontFamily="@font/nunitobold"
                        android:paddingRight="20dp"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerTopRated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtHeaderTopRated"
                        android:layout_marginTop="7dp"
                        android:scrollbars="horizontal"
                        android:scrollbarSize="0dp"

                        />
                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</FrameLayout>